# gtest-clion-template

./: .gitignore  CMakeLists.txt  README.md  Untitled Diagram111.drawio  main.cxx
diagrams/: Untitled Diagram.drawio
test/: CMakeLists.txt  ExampleTests.cxx
